--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -5,20 +5,25 @@
 				<img src="@img/icons/logo.svg" alt="logo">
 			</a>
 			<div class="header__menu menu">
-				<div class="menu__body">
-					<nav class="menu__navigation navigation-menu">
-						<ul class="navigation-menu__list">
-							<li class="navigation-menu__item"><a href="#" class="navigation-menu__link">Services</a></li>
-							<li class="navigation-menu__item"><a href="#" class="navigation-menu__link">Portfolio</a></li>
-							<li class="navigation-menu__item"><a href="#" class="navigation-menu__link">Pricing</a></li>
-						</ul>
-					</nav>
-					<div class="menu__options option-menu">
-						<a href="tel:(303) 555-0105" class="option-menu__tell">(303) 555-0105</a>
-						<select name="form[]" data-class-modif="form" class="option-menu__select">
-							<option value="EN" selected>EN</option>
-							<option value="RU">RU</option>
-						</select>
+				<div class="menu__wrapper">
+					<div class="menu__body">
+						<nav class="menu__navigation navigation-menu">
+							<ul class="navigation-menu__list">
+								<li class="navigation-menu__item"><a href="#"
+										class="navigation-menu__link hover-underline">Services</a></li>
+								<li class="navigation-menu__item"><a href="#"
+										class="navigation-menu__link hover-underline">Portfolio</a></li>
+								<li class="navigation-menu__item"><a href="#"
+										class="navigation-menu__link hover-underline">Pricing</a></li>
+							</ul>
+						</nav>
+						<div class="menu__options option-menu">
+							<a href="tel:(303) 555-0105" class="option-menu__tell hover-underline">(303) 555-0105</a>
+							<select name="form[]" data-class-modif="form" class="option-menu__select">
+								<option value="EN" selected>EN</option>
+								<option value="RU">RU</option>
+							</select>
+						</div>
 					</div>
 				</div>
 			</div>
