--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,72 @@
-<footer class="footer">
+<footer class="footer footer_backgroundGray">
 	<div class="footer__container">
+		<div class="footer__body">
+			<div class="footer__about about-footer">
+				<a href="#" class="about-footer__logo">
+					<img src="@img/icons/logo.svg" alt="logo">
+				</a>
+				<div class="about-footer__text text">We are one of the leading interior design and remodeling studios
+					available for all of your residential and commercial interior design needs.</div>
+			</div>
+			<div class="footer__navigation navigation-footer">
+				<h4 class="navigation-footer__title footer-title">Navigation</h4>
+				<nav class="navigation-footer__menu footer-menu">
+					<ul class="footer-menu__list">
+						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">About</a></li>
+						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Services</a>
+						</li>
+						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Portfolio</a>
+						</li>
+						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Pricing</a></li>
+						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Testemonials</a>
+						</li>
+
+					</ul>
+				</nav>
+			</div>
+			<div class="footer__contacts contacts-footer">
+				<h4 class="contacts-footer__title footer-title">Contacts</h4>
+				<div class="contacts-footer__adress">
+					<h5 class="contacts-footer__subtitle">ADRESS</h5>
+					<a href="https://goo.gl/maps/2f1uSDmEcn2qG1iB8" target="_blank"
+						class="contacts-footer__text hover-underline">3517 W.
+						Gray St. Utica, Pennsylvania 57867</a>
+				</div>
+				<div class="contacts-footer__email">
+					<h5 class="contacts-footer__subtitle">EMAIL</h5>
+					<a href="mailto:michelle.rivera@idstudio.com" target="_blank"
+						class="contacts-footer__text hover-underline">michelle.rivera@idstudio.com</a>
+				</div>
+				<div class="contacts-footer__phones">
+					<h5 class="contacts-footer__subtitle">PHONES</h5>
+					<div class="contacts-footer__text">
+						<a href="tell:8085550111" target="_blank" class="hover-underline">(808)
+							555-0111</a> or <a href="tell:3035550105" target="_blank" class="hover-underline">(303)
+							555-0105</a>
+					</div>
+				</div>
+			</div>
+			<div class="footer__copyright">© 2023 id Studio. All Rights Reserved.</div>
+			<div class="footer__social social">
+				<a href="https://twitter.com/" target="_blank" class="social__item">
+					<svg>
+						<use xlink:href="@img/icons/icons.svg#Twitter"></use>
+					</svg>
+				</a>
+				<a href="https://www.linkedin.com/" target="_blank" class="social__item">
+					<svg>
+						<use xlink:href="@img/icons/icons.svg#Linkedin"></use>
+					</svg>
+				</a>
+				<a href="https://www.facebook.com/" target="_blank" class="social__item">
+					<svg>
+						<use xlink:href="@img/icons/icons.svg#Fb"></use>
+					</svg>
+				</a>
+			</div>
+
+		</div>
+
+
 	</div>
 </footer>
