--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -12,15 +12,19 @@
 				<h4 class="navigation-footer__title footer-title">Navigation</h4>
 				<nav class="navigation-footer__menu footer-menu">
 					<ul class="footer-menu__list">
-						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">About</a></li>
-						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Services</a>
+						<li class="footer-menu__item"><a href="#" data-goto=".about"
+								class="footer-menu__link hover-underline">About</a></li>
+						<li class="footer-menu__item"><a href="#" data-goto=".services"
+								class="footer-menu__link hover-underline">Services</a>
 						</li>
-						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Portfolio</a>
+						<li class="footer-menu__item"><a href="#" data-goto=".portfolio"
+								class="footer-menu__link hover-underline">Portfolio</a>
 						</li>
-						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Pricing</a></li>
-						<li class="footer-menu__item"><a href="#" class="footer-menu__link hover-underline">Testemonials</a>
+						<li class="footer-menu__item"><a href="#" data-goto=".pricing"
+								class="footer-menu__link hover-underline">Pricing</a></li>
+						<li class="footer-menu__item"><a href="#" data-goto=".reviews"
+								class="footer-menu__link hover-underline">Testemonials</a>
 						</li>
-
 					</ul>
 				</nav>
 			</div>
