--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -9,11 +9,11 @@
 					<div class="menu__body">
 						<nav class="menu__navigation navigation-menu">
 							<ul class="navigation-menu__list">
-								<li class="navigation-menu__item"><a href="#"
+								<li class="navigation-menu__item"><a href="#" data-goto=".services"
 										class="navigation-menu__link hover-underline">Services</a></li>
-								<li class="navigation-menu__item"><a href="#"
+								<li class="navigation-menu__item"><a href="#" data-goto=".portfolio"
 										class="navigation-menu__link hover-underline">Portfolio</a></li>
-								<li class="navigation-menu__item"><a href="#"
+								<li class="navigation-menu__item"><a href="#" data-goto=".pricing"
 										class="navigation-menu__link hover-underline">Pricing</a></li>
 							</ul>
 						</nav>
@@ -27,8 +27,10 @@
 					</div>
 				</div>
 			</div>
-			<button type="button" class="icon-menu"><span></span>
-			</button>
+			<div class="header__icon lock-padding">
+				<button type="button" class="icon-menu"><span></span>
+				</button>
+			</div>
 		</div>
 	</div>
 </header>
