--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 								designing your everyday life and work through great ideas since 1999.
 							</div>
 							<div class="main__action action">
-								<button type="button" data-popup="#popup" class="main__btn button button_hover">Get started
-								</button>
+								<a href="#popup" class="main__btn button button_hover popup-link">Get started
+								</a>
 							</div>
 						</div>
 					</div>
@@ -122,12 +122,12 @@
 						</div>
 					</div>
 					<div class="services__action action">
-						<button type="button" data-popup="#popup" class="services__btn button button_hover">Free consultation
-						</button>
+						<a href="#popup" class="services__btn button button_hover popup-link">Free consultation
+						</a>
 					</div>
 				</div>
 			</section>
-			<section class="page__portfolio portfolio portfolio_backgroundGray">
+			<section class="page__portfolio portfolio portfolio_backgroundGray" id="portfolio">
 				<div class="portfolio__container">
 					<h2 class="portfolio__title title title_center">Our <span>Portfolio</span></h2>
 					<div data-tabs class="portfolio__tabs tabs-portfolio">
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__pricing pricing">
+			<section class="page__pricing pricing" id="pricing">
 				<div class="pricing__container">
 					<h2 class="pricing__title title title_center">Our <span>Pricing</span></h2>
 					<div class="pricing__items">
@@ -467,8 +467,8 @@
 					<div class="question__body">
 						<h2 class="question__title title">Do you have <br><span>any question?</span></h2>
 						<div class="question__action action">
-							<button type="button" data-popup="#popup" class="question__btn button button_hover">order a
-								call</button>
+							<a href="#popup" class="question__btn button button_hover popup-link">order a
+								call</a>
 						</div>
 					</div>
 				</div>
